[package]
name = "lightscript"
version = "0.1.0"
authors = ["Gustavo Konrad <g.konrad@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
thiserror = "1.0.21"
phf = { version = "0.8", features = ["macros"] }

[lib]
name = "lightscript_lib"
path = "lib/lightscript.rs"
